# onyx_font

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: fon_rendering.md  libexe_font_rendering.md  programmers_guide.md  windows_font_format.md
examples/: CMakeLists.txt  text_rendering_demo.cc
examples/imgui_demo/: CMakeLists.txt  demo_app.cc  demo_app.hh  font_manager.cc  font_manager.hh  main.cc
examples/imgui_demo/panels/: atlas_viewer_panel.cc  atlas_viewer_panel.hh  demo_panel.hh  font_browser_panel.cc  font_browser_panel.hh  metrics_panel.cc  metrics_panel.hh  text_editor_panel.cc  text_editor_panel.hh
examples/imgui_demo/rendering/: gl_atlas.cc  gl_atlas.hh  imgui_font_renderer.cc  imgui_font_renderer.hh
examples/text_scroller/: CMakeLists.txt  main.cc
include/onyx_font/: bitmap_font.hh  font_converter.hh  font_factory.hh  ttf_font.hh  vector_font.hh
include/onyx_font/text/: atlas_surface.hh  font_source.hh  glyph_cache.hh  glyph_rasterizer.hh  raster_target.hh  text_rasterizer.hh  text_renderer.hh  types.hh  utf8.hh
include/onyx_font/utils/: bitmap_glyphs_storage.hh  stb_truetype_font.hh
src/onyx_font/: CMakeLists.txt  bitmap_font.cc  font_converter.cc  font_factory.cc  ttf_font.cc  vector_font.cc
src/onyx_font/formats/: bgi.ds
src/onyx_font/loader/: bgi_fon.cc  loaders.hh  win_fon.cc  win_vector_fon.cc
src/onyx_font/text/: font_source.cc  text_rasterizer.cc  utf8.cc
src/onyx_font/utils/: bitmap_glyphs_storage.cc  stb_truetype_font.cc
test/: CMakeLists.txt  dump_font_metadata.cc  test_font_factory.cc  test_glyph_rasterizer.cc  test_glyphs_bitmap_storage.cc  test_raster_target.cc  test_text_renderer.cc
unittest/: CMakeLists.txt  main.cc  test_bitmap_font.cc  test_data.hh  test_font_converter.cc  test_font_source.cc  test_glyph_cache.cc  test_glyphs_bitmap_storage.cc  test_text_rasterizer.cc  test_text_renderer.cc  test_text_rendering.cc  test_ttf_font.cc  test_utf8.cc  test_vector_font.cc
